cambio estilo menú

--- a/pages/Página1.html
+++ b/pages/Página1.html
@@ -4,14 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/styles.css"
+    <link rel="stylesheet" href="../css/styles.css">
 
     <title>Página1</title>
 </head>
 
 <body>
-    <header>
-        <nav class="nav">
+    <header class="header">
+        <nav>
             <ul>
                 <li><a href="../index.html">Inicio</a></li>
                 <li><a href="#">El sol en los signos</a></li>
