--- a/pages/Página2.html
+++ b/pages/Página2.html
@@ -9,14 +9,17 @@
 </head>
 
 <body>
-    <header>
-        <nav>Menú</nav>
-        <ul>
-            <li><a href="../index.html">Inicio</a></li>
-            <li><a href="./p">El sol en Astrología</a></li>
-            <li><a href="#">El significado del signo lunar</a></li>
-            <li><a href="./Página3.html">El ascendente</a></li>
-            <li><a href="./Página4.html">Tu carta-natal</a></li>
+    <header class="header">
+        <nav>
+            <ul>
+                <li><a href="../index.html">Inicio</a></li>
+                <li><a href="./Página1.html">El sol en los signos</a></li>
+                <li><a href="#">La luna en los signos</a></li>
+                <li><a href="./Página3.html">El ascendente</a></li>
+                <li><a href="./Página4.html">Tu carta natal</a></li>
+
+        </nav>
+
         </ul>
     </header>
 
