--- a/pages/Página3.html
+++ b/pages/Página3.html
@@ -9,15 +9,17 @@
 </head>
 
 <body>
-    <header>
-        <nav>Menú</nav>
-        <ul>
-            <li><a href="../index.html"></a></li>
-            <li><a href="/pages/Página1.html">El sol en Astrología</a></li>
-            <li><a href="./El significado del signo lunar</a></li>
-            <li><a href="#">El ascendente</a></li>
-            <li><a href="./">Tu carta-natal</a></li>
-        </ul>
+    <header class="header">
+        <nav>
+            <ul>
+                <li><a href="../index.html">Inicio</a></li>
+                <li><a href="./Página1.html">El sol en los signos</a></li>
+                <li><a href="./Página2.html">La luna en los signos</a></li>
+                <li><a href="#">El ascendente</a></li>
+                <li><a href="./Página4.html">Tu carta natal</a></li>
+
+            </ul>
+        </nav>
     </header>
     <div class="grid-container">
         <div class="grid-item item 1 header">1</div>
