--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 </head>
 
 <body>
-    <header>
-        <nav class="nav">
+    <header class="header">
+        <nav>
             <ul>
                 <li><a href="#">Inicio</a></li>
                 <li> <a href="./pages/Página1.html">El sol en los signos</a></li>
@@ -18,6 +18,7 @@
                 <li><a href="./pages/Página3.html">El ascendente</a></li>
                 <li><a href="./pages/Página4.html">Tu carta-natal</a></li>
             </ul>
+        </nav>
     </header>
     <main>
 
