--- a/pages/Página4.html
+++ b/pages/Página4.html
@@ -9,20 +9,23 @@
 </head>
 
 <body>
-    <header>
-        <nav>Menú</nav>
-        <ul>
-            <li><a href="../index.html"></a></li>
-            <li><a href="./Página1.html">El sol en Astrología</a></li>
-            <li><a href="./Página2.html">El significado del signo lunar</a></li>
-            <li><a href="./Página3.html">El ascendente</a></li>
-            <li><a href="#">Tu carta-natal</a></li>
-        </ul>
+    <header class="header">
+        <nav>
+            <ul>
+                <li><a href="../index.html">Inicio</a></li>
+                <li><a href="./Página1.html">El sol en Astrología</a></li>
+                <li><a href="./Página2.html">La luna en los signos</a></li>
+                <li><a href="./Página3.html">El ascendente</a></li>
+                <li><a href="#">Tu carta-natal</a></li>
+            </ul>
+        </nav>
     </header>
     <div class="grid-container">
         <div class="grid-item item 1 header">1</div>
         <div class="grid-item item 2 sidebar">2</div>
         <div class="grid-item main">3</div>
+
+    </div>
 
 </body>
 
