estilos en página 1 y 2

--- a/index.html
+++ b/index.html
@@ -32,6 +32,11 @@
                     para
                     predecir eventos futuros y analizar la personalidad humana
                 </p>
+                <div>
+                    <img class="sol"
+                        src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTgIpdrYl6ombLeMCGFyjJcciOJR7zZueE5pQ&s"
+                        alt="El sol">
+                </div>
             </div>
             <div class="hijo2">
                 <img class="signos"
@@ -40,21 +45,23 @@
 
 
             </div>
-            <footer class="hijo3">
-                <li>
-                    <img
-                        src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.flaticon.es%2Ficono-gratis%2Fyoutube_174883&psig=AOvVaw1AsiZriFNpAZw5VX8OyEOm&ust=1756844138807000&source=images&cd=vfe&opi=89978449&ved=0CBIQjRxqFwoTCMDn-9mwuI8DFQAAAAAdAAAAABAE">
-                    <a href="https:/www.youtube.com/watch?v=y5PiOb0RjHY">Canal de youtube</a>
-                </li>
-                <li>
-                    <img src="https://cdn-icons-png.flaticon.com/512/1384/1384095.png" alt="whatsap" width="20px">
-                    <a href="whatsap">whatsap</a>
-                </li>
+    </main>
+    <div>
+        <footer class="hijo3">
+            <li>
+                <img class="instagram"
+                    src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTMgfKNwFj7O66Qn-tIw87Yzo1A3DNh9rGq5g&s"
+                    alt="instagram" width="30px">
+            </li>
+            <li>
+                <img src="https://cdn-icons-png.flaticon.com/512/1384/1384095.png" alt="whatsap" width="20px">
+                <a class="whatsap">whatssap</a>
+            </li>
 
 
-            </footer>
+        </footer>
 
-        </div>
+    </div>
 
 </body>
 
