--- a/pages/Página2.html
+++ b/pages/Página2.html
@@ -23,14 +23,39 @@
         </ul>
     </header>
 
-    <div class="grid-container">
-        <div class="grid-item item 1 header">1</div>
-        <div class="grid-item item 2 sidebar">2</div>
-        <div class="grid-item main">3</div>
+    <main>
 
 
+        <div class="grid-container">
+            <div class="hijo item1">La luna en los signos
 
-    </div>
+                <h5>Aries</h5>
+                <h5>Tauro</h5>
+                <h5>Géminis</h5>
+                <h5>Cáncer</h5>
+                <h5>Leo</h5>
+                <h5>Virgo</h5>
+                <h5>Libra</h5>
+                <h5>Escorpio</h5>
+                <h5>Sagitario</h5>
+                <h5>Capricornio</h5>
+                <h5>Acuario</h5>
+                <h5>Piscis</h5>
+
+            </div>
+            <div class="hijo item2">
+                <img class="Laluna"
+                    src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/dd/Full_Moon_Luc_Viatour.jpg/330px-Full_Moon_Luc_Viatour.jpg"
+                    alt="la luna">
+            </div>
+            <div>
+
+
+                <footer class="hijo item3">
+                    <p>copyright 2025 Todos los derechos reservados</p>
+                </footer>
+            </div>
+
 
 </body>
 
