modificaciones en html y css, paginas 1 a 4

--- a/pages/Página2.html
+++ b/pages/Página2.html
@@ -27,7 +27,8 @@
 
 
         <div class="grid-container">
-            <div class="hijo item1">La luna en los signos
+            <div class="hijo item1">
+                <h4 class="título">La luna en los signos</h4>
 
                 <h5>Aries</h5>
                 <h5>Tauro</h5>
