--- a/pages/Página3.html
+++ b/pages/Página3.html
@@ -22,9 +22,35 @@
         </nav>
     </header>
     <div class="grid-container">
-        <div class="grid-item item 1 header">1</div>
-        <div class="grid-item item 2 sidebar">2</div>
-        <div class="grid-item main">3</div>
+        <div class="hijo item1">
+            <h4 class="título">El ascendente en los signos</h4>
+            <h5>Aries</h5>
+            <h5>Tauro</h5>
+            <h5>Géminis</h5>
+            <h5>Cáncer</h5>
+            <h5>Leo</h5>
+            <h5>Virgo</h5>
+            <h5>Libra</h5>
+            <h5>Escorpio</h5>
+            <h5>Sagitario</h5>
+            <h5>Capricornio</h5>
+            <h5>Acuario</h5>
+            <h5>Piscis</h5>
+
+        </div>
+        <div class="hijo item2">
+            <img class="elascendente" src="https://www.astrolink.com/data/posts/images/asc-desc_artigo_ilustra001.jpg"
+                alt="El ascendente">
+        </div>
+        <div>
+
+
+            <footer class="hijo item3">
+                <p>copyright 2025 Todos los derechos reservados</p>
+            </footer>
+        </div>
+
+
 </body>
 
 </html>
