--- a/pages/Página1.html
+++ b/pages/Página1.html
@@ -33,8 +33,8 @@
 
 
         <div class="grid-container">
-            <div class="hijo item1">El Sol en los signos
-
+            <div class="hijo item1">
+                <h4 class="título">Sol en los signos</h4>
                 <h5>Aries</h5>
                 <h5>Tauro</h5>
                 <h5>Géminis</h5>
