--- a/pages/Página4.html
+++ b/pages/Página4.html
@@ -20,12 +20,30 @@
             </ul>
         </nav>
     </header>
-    <div class="grid-container">
-        <div class="grid-item item 1 header">1</div>
-        <div class="grid-item item 2 sidebar">2</div>
-        <div class="grid-item main">3</div>
 
-    </div>
+    <div class="grid-container">
+        <div class="hijo item1">
+            <h3 class="título">Tu carta natal</h3>
+
+            <p class="carta">ipsum dolor sit amet consectetur adipisicing elit. Eligendi, accusamus tempora cum
+                tempore amet
+                magni accusantium explicabo hic harum inventore.</p>
+        </div>
+
+
+        <div class="hijo item2">
+            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTS6n1YY9rO0Q0tdS9igtkuvmpcPTx4-Ct3LQ&s"
+                alt="carta">
+
+
+
+        </div>
+        <div>
+            <footer class="item3">
+                <h4>Copyright 2025 Todos los derechos reservados</h4>
+            </footer>
+        </div>
+
 
 </body>
 
