cree carpeta sass

--- a/pages/Página1.html
+++ b/pages/Página1.html
@@ -42,7 +42,7 @@
                 <h5>Leo</h5>
                 <h5>Virgo</h5>
                 <h5>Libra</h5>
-                <h5>Escorpio</h5>
+                <h5>Escorpsio</h5>
                 <h5>Sagitario</h5>
                 <h5>Capricornio</h5>
                 <h5>Acuario</h5>
