modifique el proyecto a 3 html

--- a/pages/Página1.html
+++ b/pages/Página1.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/styles.css">
+    <link rel="stylesheet" href="../css/main.css">
 
     <title>Página1</title>
 </head>
@@ -16,8 +16,7 @@
                 <li><a href="../index.html">Inicio</a></li>
                 <li><a href="#">El sol en los signos</a></li>
                 <li><a href="./Página2.html">La luna en los signos</a></li>
-                <li> <a href="./Página3.html">El ascendente</a></li>
-                <li> <a href="./Página4.html">Tu carta natal</a></li>
+
             </ul>
         </nav>
 
