--- a/pages/Página2.html
+++ b/pages/Página2.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/styles.css">
+    <link rel="stylesheet" href="../css/main.css">
     <title>Página2</title>
 </head>
 
@@ -15,8 +15,6 @@
                 <li><a href="../index.html">Inicio</a></li>
                 <li><a href="./Página1.html">El sol en los signos</a></li>
                 <li><a href="#">La luna en los signos</a></li>
-                <li><a href="./Página3.html">El ascendente</a></li>
-                <li><a href="./Página4.html">Tu carta natal</a></li>
 
         </nav>
 
