--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/styles.css">
+    <link rel="stylesheet" href="./css/main.css">
     <title>index.html</title>
 </head>
 
@@ -15,9 +15,7 @@
                 <li><a href="#">Inicio</a></li>
                 <li> <a href="./pages/Página1.html">El sol en los signos</a></li>
                 <li><a href="./pages/Página2.html">La luna en los signos</a></li>
-                <li><a href="./pages/Página3.html">El ascendente</a></li>
-                <li><a href="./pages/Página4.html">Tu carta-natal</a></li>
-            </ul>
+
         </nav>
     </header>
     <main>
