--- a/pages/Página2.html
+++ b/pages/Página2.html
@@ -24,23 +24,25 @@
     <main>
 
 
-        <div class="grid-container">
+        <div class="grid-container1">
             <div class="hijo item1">
-                <h4 class="título">La luna en los signos</h4>
+                <h2 class=>La luna en los signos</h2>
+                <ul>
+                    <li> Aries</li>
+                    <li>Tauro</li>
+                    <li>Géminis</li>
+                    <li>Cáncer</li>
+                    <li>Leo</li>
+                    <li>Virgo</li>
+                    <Li>Libra</Li>
+                    <li>Escorpio</li>
+                    <li>Sagitario</li>
+                    <li>Capricorio</li>
+                    <li>Acuario</li>
+                    <li>Piscis</li>
 
-                <h5>Aries</h5>
-                <h5>Tauro</h5>
-                <h5>Géminis</h5>
-                <h5>Cáncer</h5>
-                <h5>Leo</h5>
-                <h5>Virgo</h5>
-                <h5>Libra</h5>
-                <h5>Escorpio</h5>
-                <h5>Sagitario</h5>
-                <h5>Capricornio</h5>
-                <h5>Acuario</h5>
-                <h5>Piscis</h5>
 
+                </ul>
             </div>
             <div class="hijo item2">
                 <img class="Laluna"
