cambios en html y scss

--- a/pages/Página2.html
+++ b/pages/Página2.html
@@ -26,8 +26,8 @@
 
         <div class="grid-container1">
             <div class="hijo item1">
-                <h2 class=>La luna en los signos</h2>
-                <ul>
+                <h2>La luna en los signos</h2>
+                <li>
                     <li> Aries</li>
                     <li>Tauro</li>
                     <li>Géminis</li>
@@ -42,7 +42,7 @@
                     <li>Piscis</li>
 
 
-                </ul>
+                </li>
             </div>
             <div class="hijo item2">
                 <img class="Laluna"
