--- a/pages/Página2.html
+++ b/pages/Página2.html
@@ -24,7 +24,7 @@
     <main>
 
 
-        <div class="grid-container1">
+        <div class="grid-container">
             <div class="hijo item1">
                 <h2>La luna en los signos</h2>
                 <li>
