cambios en estilo

--- a/index.html
+++ b/index.html
@@ -44,13 +44,13 @@
 
             </div>
 
-            <div>
+            
                 <footer class="hijo3">
 
 
                     <img class="instagram"
                         src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTMgfKNwFj7O66Qn-tIw87Yzo1A3DNh9rGq5g&s"
-                        alt="instagram" width="30px">
+                        alt="instagram">
 
 
 
