cambios en estilos y html

--- a/pages/Página2.html
+++ b/pages/Página2.html
@@ -45,7 +45,7 @@
                 </li>
             </div>
             <div class="hijo item2">
-                <img class="Laluna"
+                <img class="laluna"
                     src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/dd/Full_Moon_Luc_Viatour.jpg/330px-Full_Moon_Luc_Viatour.jpg"
                     alt="la luna">
             </div>
