cambios en html y scss en index y páginas

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/main.css">
+    <link rel="stylesheet" href="css/main.css">
     <title>index.html</title>
 </head>
 
@@ -49,10 +49,11 @@
 
             <footer class="hijo3">
 
-
-                <img class="instagram"
-                    src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTMgfKNwFj7O66Qn-tIw87Yzo1A3DNh9rGq5g&s"
-                    alt="instagram">
+                <a href="https://www.instagram.com/">
+                    <img class="logo"
+                        src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/95/Instagram_logo_2022.svg/1200px-Instagram_logo_2022.svg.png"
+                        alt="logo">
+                </a>
 
 
 
