--- a/pages/Página2.html
+++ b/pages/Página2.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/main.css">
+    <link rel="stylesheet" href="/css/main.css">
     <title>Página2</title>
 </head>
 
@@ -24,10 +24,11 @@
     <main>
 
 
-        <div class="grid-container">
-            <div class="hijo item1">
+        <div class="grid-container1">
+            <div class="hijo item4">
                 <h2>La luna en los signos</h2>
-                <li>
+                <ul>
+
                     <li> Aries</li>
                     <li>Tauro</li>
                     <li>Géminis</li>
@@ -41,10 +42,12 @@
                     <li>Acuario</li>
                     <li>Piscis</li>
 
+                </ul>
 
-                </li>
+
+
             </div>
-            <div class="hijo item2">
+            <div class="hijo item5">
                 <img class="laluna"
                     src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/dd/Full_Moon_Luc_Viatour.jpg/330px-Full_Moon_Luc_Viatour.jpg"
                     alt="la luna">
@@ -52,7 +55,7 @@
             <div>
 
 
-                <footer class="hijo item3">
+                <footer class="hijo item6">
                     <p>copyright 2025 Todos los derechos reservados</p>
                 </footer>
             </div>
